--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
   <h2>Recente projecten</h2>
   <p class="sub">Hier is een kort overzicht van enkele recente projecten. Op mijn projectpagina kan je al mijn projecten bekijken.</p>
   <div class="grid">
-    <a class="card" href="project.html">
+    <a class="card" href="project-1.html">
       <img src="assets/images/project1.png" alt="Project 1">
       <div class="content">
         <h3>Project 1</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur iure delectus est, sed eveniet repudiandae eum voluptates magnam atque. Non, laborum! Odio eaque nostrum magni! Iure sit officiis saepe porro.</p>
       </div>
     </a>
-    <a class="card" href="project.html">
+    <a class="card" href="project-2.html">
       <img src="assets/images/project2.png" alt="Project 2">
       <div class="content">
         <h3>Project 2</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi voluptatum officia quidem laborum exercitationem voluptate velit explicabo cumque, a tempora in veritatis id quisquam nulla commodi, iste dolores obcaecati harum?</p>
       </div>
     </a>
-    <a class="card" href="project.html">
+    <a class="card" href="project-3.html">
       <img src="assets/images/project3.png" alt="Project 3">
       <div class="content">
         <h3>Project 3</h3>
