--- a/contact.html
+++ b/contact.html
@@ -3,61 +3,67 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Portfolio | Sybe Huybrechts</title>
-  <meta name="description" content="Portfolio van Sybe Huybrechts">
+  <title>Contact | Sybe Huybrechts</title>
+  <meta name="description" content="Contactpagina van Sybe Huybrechts">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 <header class="header">
-  <div class="container nav">
-    <a aria-label="Home" class="logo" href="index.html">SYBE</a>
+  <div class="container">
+    <a class="logo" href="index.html">
+      <img src="assets/images/logo.png" alt="Sybe Huybrechts">
+    </a>
     <nav>
-      <ul id="menu" class="menu">
+      <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
       </ul>
     </nav>
   </div>
 </header>
+
 <main>
 <div class="container">
 
 <section class="section">
   <h2>Contact</h2>
-  <p class="sub">Je kan me bereiken via onderstaande kanalen of het formulier.</p>
-
-  <ul style="margin-bottom:1rem">
-    <li><strong>Telefoon:</strong> 0476 02 81 45</li>
-    <li><strong>E-mail:</strong> <a href="mailto:sybe.huybrechts@gmail.com">Sybe.Huybrechts@gmail.com</a></li>
-    <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/sybe-huybrechts-9250a0302/" target="_blank" rel="noopener">LinkedIn-profiel</a></li>
-    <li><strong>GitHub:</strong> <a href="https://github.com/SybeHuy" target="_blank" rel="noopener">github.com</a></li>
-  </ul>
+  <p class="sub">Laat een bericht achter.</p>
 
   <form>
     <div>
       <label for="naam">Naam</label>
-      <input id="naam" type="text" placeholder="Jouw naam" required>
+      <input type="text" id="naam" name="naam" placeholder="Voor- en achternaam">
     </div>
+
     <div>
       <label for="email">E-mail</label>
-      <input id="email" type="email" placeholder="jij@voorbeeld.be" required>
+      <input type="email" id="email" name="email" placeholder="voorbeeld@mail.be">
     </div>
+
     <div>
       <label for="bericht">Bericht</label>
-      <textarea id="bericht" placeholder="Schrijf hier je bericht..." required></textarea>
+      <textarea id="bericht" name="bericht" placeholder="Typ hier je bericht"></textarea>
     </div>
-    <button class="btn" type="submit">Verstuur</button>
+
+    <button class="btn" type="submit">Versturen</button>
   </form>
+
 </section>
 
 </div>
 </main>
+
 <footer class="footer">
   <div class="container">
     <p class="small">Sybe Huybrechts</p>
   </div>
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
