--- a/index.html
+++ b/index.html
@@ -5,22 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio | Sybe Huybrechts</title>
   <meta name="description" content="Portfolio van Sybe Huybrechts">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 <header class="header">
-  <div class="container nav">
-    <a aria-label="Home" class="logo" href="index.html">SYBE</a>
+  <div class="container">
+    <a class="logo" href="index.html">
+      <img src="assets/images/logo.png" alt="Sybe Huybrechts">
+    </a>
     <nav>
-      <ul id="menu" class="menu">
-        <li><a href="index.html">Home</a></li>
+      <ul class="menu">
+        <li><a href="index.html" class="active">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
 </header>
+
 <main>
 <div class="container">
 
@@ -47,26 +52,29 @@
 <section class="section">
   <h2>Recente projecten</h2>
   <p class="sub">Hier is een kort overzicht van enkele recente projecten. Op mijn projectpagina kan je al mijn projecten bekijken.</p>
+
   <div class="grid">
     <a class="card" href="project-1.html">
       <img src="assets/images/project1.png" alt="Project 1">
       <div class="content">
         <h3>Project 1</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur iure delectus est, sed eveniet repudiandae eum voluptates magnam atque. Non, laborum! Odio eaque nostrum magni! Iure sit officiis saepe porro.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur iure delectus est, sed eveniet repudiandae eum voluptates magnam atque.</p>
       </div>
     </a>
+
     <a class="card" href="project-2.html">
       <img src="assets/images/project2.png" alt="Project 2">
       <div class="content">
         <h3>Project 2</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi voluptatum officia quidem laborum exercitationem voluptate velit explicabo cumque, a tempora in veritatis id quisquam nulla commodi, iste dolores obcaecati harum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi voluptatum officia quidem laborum exercitationem voluptate velit explicabo cumque.</p>
       </div>
     </a>
+
     <a class="card" href="project-3.html">
       <img src="assets/images/project3.png" alt="Project 3">
       <div class="content">
         <h3>Project 3</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam reiciendis atque dignissimos numquam, nulla cupiditate doloremque nostrum dicta. Laborum laboriosam voluptas ipsum, at iste a quos temporibus hic molestias veniam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam reiciendis atque dignissimos numquam, nulla cupiditate doloremque nostrum dicta.</p>
       </div>
     </a>
   </div>
@@ -74,10 +82,14 @@
 
 </div>
 </main>
+
 <footer class="footer">
   <div class="container">
     <p class="small">Sybe Huybrechts</p>
   </div>
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
