--- a/portfolio.html
+++ b/portfolio.html
@@ -5,71 +5,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio | Sybe Huybrechts</title>
   <meta name="description" content="Portfolio van Sybe Huybrechts">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 <header class="header">
-  <div class="container nav">
-    <a aria-label="Home" class="logo" href="index.html">SYBE</a>
+  <div class="container">
+    <a class="logo" href="index.html">
+      <img src="assets/images/logo.png" alt="Sybe Huybrechts">
+    </a>
     <nav>
-      <ul id="menu" class="menu">
+      <ul class="menu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="portfolio.html" class="active">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
 </header>
+
 <main>
 <div class="container">
 
 <section class="section">
   <h2>Portfolio</h2>
   <p class="sub">Overzicht van 6 projecten.</p>
+
   <div class="grid">
     <a class="card" href="project-1.html">
       <img src="assets/images/project1.png" alt="Project 1">
       <div class="content">
         <h3>Project 1</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus odio nesciunt officia! Provident ipsam harum cumque, quidem vitae ex eaque aperiam voluptas praesentium optio eos deserunt explicabo tempora aliquid magnam.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus odio nesciunt officia!</p>
       </div>
     </a>
+
     <a class="card" href="project-2.html">
       <img src="assets/images/project2.png" alt="Project 2">
       <div class="content">
         <h3>Project 2</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi voluptates laborum error quae vero ab? Fugiat, aspernatur quos assumenda eos doloribus nisi, quaerat facilis, eius molestiae delectus nulla distinctio accusamus!
-        </p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi voluptates laborum error quae vero ab?</p>
       </div>
     </a>
+
     <a class="card" href="project-3.html">
       <img src="assets/images/project3.png" alt="Project 3">
       <div class="content">
         <h3>Project 3</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vero tenetur facere mollitia ad voluptatibus quaerat? Iste, optio! Tempora iste dolorem reiciendis magni aperiam est nostrum voluptatibus quae rem at.
-        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium vero tenetur facere mollitia ad voluptatibus quaerat?</p>
       </div>
     </a>
+
     <a class="card" href="project-4.html">
       <img src="assets/images/project4.png" alt="Project 4">
       <div class="content">
         <h3>Project 4</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam cum placeat iste corrupti. Sapiente neque dolorum quo maiores voluptatibus ex similique, architecto autem, consequuntur molestiae amet deleniti aperiam. Aliquid, deserunt.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam cum placeat iste corrupti.</p>
       </div>
     </a>
+
     <a class="card" href="project-5.html">
       <img src="assets/images/project5.png" alt="Project 5">
       <div class="content">
         <h3>Project 5</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt dolorum, quam placeat quis pariatur error, ipsam suscipit sit natus quaerat perspiciatis consectetur officia sint veniam, quasi quos odit harum amet.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt dolorum, quam placeat quis pariatur error.</p>
       </div>
     </a>
+
     <a class="card" href="project-6.html">
       <img src="assets/images/project6.png" alt="Project 6">
       <div class="content">
         <h3>Project 6</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius id modi architecto nisi. Laborum, optio illo magnam sequi quasi fuga debitis. Ipsum dicta cum ea doloremque veritatis voluptatibus beatae adipisci?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius id modi architecto nisi.</p>
       </div>
     </a>
   </div>
@@ -77,10 +86,14 @@
 
 </div>
 </main>
+
 <footer class="footer">
   <div class="container">
     <p class="small">Sybe Huybrechts</p>
   </div>
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
