--- a/project-5.html
+++ b/project-5.html
@@ -4,37 +4,47 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Project 5 | Sybe Huybrechts</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 <header class="header">
-  <div class="container nav">
-    <a class="logo" href="index.html">SYBE</a>
+  <div class="container">
+    <a class="logo" href="index.html">
+      <img src="assets/images/logo.png" alt="Sybe Huybrechts">
+    </a>
     <nav>
+      <ul class="menu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="portfolio.html" class="active">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </div>
 </header>
+
 <main>
 <div class="container">
 <section class="section">
   <h2>Project 5</h2>
-  <p class="sub">Hier komt een korte beschrijving</p>
+  <p class="sub">Hier komt een korte beschrijving.</p>
   <img src="assets/images/project5.png" alt="Project 5" style="border-radius:1rem;margin-bottom:1rem">
   <article>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum maxime voluptate dolor alias quam repudiandae aperiam ut aliquam rem eaque aut voluptas, nesciunt tempore? Autem magni cumque amet reprehenderit libero.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum maxime voluptate dolor alias quam repudiandae aperiam ut aliquam rem eaque aut voluptas.</p>
   </article>
 </section>
 </div>
 </main>
+
 <footer class="footer">
   <div class="container">
     <p class="small">Sybe Huybrechts</p>
   </div>
 </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
