--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
 </head>
 
 <body>
@@ -28,32 +29,40 @@
 
 <main>
 <div class="container">
-
 <section class="section">
   <h2>Contact</h2>
-  <p class="sub">Laat een bericht achter.</p>
+  <p class="sub">Je kan me bereiken via onderstaande kanalen of het formulier.</p>
 
-  <form>
-    <div>
-      <label for="naam">Naam</label>
-      <input type="text" id="naam" name="naam" placeholder="Voor- en achternaam">
-    </div>
+  <ul style="margin-bottom:1rem">
+    <li><strong>Telefoon:</strong> 0476 02 81 45</li>
+    <li><strong>E-mail:</strong> <a href="mailto:sybe.huybrechts@gmail.com">Sybe.Huybrechts@gmail.com</a></li>
+    <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/sybe-huybrechts-9250a0302/" target="_blank" rel="noopener">LinkedIn-profiel</a></li>
+    <li><strong>GitHub:</strong> <a href="https://github.com/SybeHuy" target="_blank" rel="noopener">github.com</a></li>
+  </ul>
 
-    <div>
-      <label for="email">E-mail</label>
-      <input type="email" id="email" name="email" placeholder="voorbeeld@mail.be">
-    </div>
+  <form name="contact" method="POST" data-netlify="true">
 
-    <div>
-      <label for="bericht">Bericht</label>
-      <textarea id="bericht" name="bericht" placeholder="Typ hier je bericht"></textarea>
-    </div>
+  <div>
+    <label for="naam">Naam</label>
+    <input id="naam" name="naam" type="text" placeholder="Jouw naam" required>
+  </div>
 
-    <button class="btn" type="submit">Versturen</button>
-  </form>
+  <div>
+    <label for="email">E-mail</label>
+    <input id="email" name="email" type="email" placeholder="jij@voorbeeld.be" required>
+  </div>
+
+  <div>
+    <label for="bericht">Bericht</label>
+    <textarea id="bericht" name="bericht" placeholder="Schrijf hier je bericht..." required></textarea>
+  </div>
+
+  <button class="btn" type="submit">Verstuur</button>
+</form>
+
+  <div id="map"></div>
 
 </section>
-
 </div>
 </main>
 
@@ -64,6 +73,22 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script>
+  const lat = 51.2021676;
+  const lng = 4.5219648;
+
+  const map = L.map('map').setView([lat, lng], 14);
+
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+    attribution: '&copy; OpenStreetMap'
+  }).addTo(map);
+
+  L.marker([lat, lng]).addTo(map)
+    .bindPopup('Wommelgem')
+    .openPopup();
+</script>
 
 </body>
 </html>
