gefixte contact form submit (hopelijk)

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <li><strong>GitHub:</strong> <a href="https://github.com/SybeHuy" target="_blank" rel="noopener">github.com</a></li>
   </ul>
 
-  <form name="contact" method="POST" data-netlify="true">
+  <form name="contact" method="POST" data-netlify="true" action="/contact.html">
 
   <div>
     <label for="naam">Naam</label>
