--- a/index.html
+++ b/index.html
@@ -54,27 +54,27 @@
   <p class="sub">Hier is een kort overzicht van enkele recente projecten. Op mijn projectpagina kan je al mijn projecten bekijken.</p>
 
   <div class="grid">
-    <a class="card" href="project-1.html">
+    <a class="card" href="webwiz.html">
       <img src="assets/images/project1.png" alt="Project 1">
       <div class="content">
-        <h3>Project 1</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur iure delectus est, sed eveniet repudiandae eum voluptates magnam atque.</p>
+        <h3>Webwiz Opdracht</h3>
+        <p>Tijdens deze opdracht werkten we in duo aan het opzetten van een netwerkconfiguratie. We richtten samen IP-adressen, subnetten en routerinstellingen in om een stabiele en veilige netwerkverbinding te realiseren.</p>
       </div>
     </a>
 
-    <a class="card" href="project-2.html">
+    <a class="card" href="RJ45.html">
       <img src="assets/images/project2.png" alt="Project 2">
       <div class="content">
-        <h3>Project 2</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi voluptatum officia quidem laborum exercitationem voluptate velit explicabo cumque.</p>
+        <h3>RJ45 connector maken</h3>
+        <p>Ik leerde hoe je van een UTP kabel zelf een RJ45 connector kan maken. Hierbij leerde ik hoe je deze correct moest afstrippen en krimpt voor een goede aansluiting te krijgen.</p>
       </div>
     </a>
 
-    <a class="card" href="project-3.html">
+    <a class="card" href="portfolioDetail.html">
       <img src="assets/images/project3.png" alt="Project 3">
       <div class="content">
-        <h3>Project 3</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam reiciendis atque dignissimos numquam, nulla cupiditate doloremque nostrum dicta.</p>
+        <h3>Portfolio website</h3>
+        <p>Voor een schoolopdracht heb ik mijn eigen portfolio­website gebouwd met HTML, Bootstrap en CSS. Daar kan je mijn projecten bekijken én zien hoe ik ze heb aangepakt.</p>
       </div>
     </a>
   </div>
@@ -85,7 +85,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p class="small">Sybe Huybrechts</p>
+    <p class="small">&copy; 2025 Sybe Huybrechts</p>
   </div>
 </footer>
 
