--- a/portfolioDetail.html
+++ b/portfolioDetail.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Project 1 | Sybe Huybrechts</title>
+  <title>Project 3 | Sybe Huybrechts</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
@@ -28,11 +28,11 @@
 <main>
 <div class="container">
 <section class="section">
-  <h2>Project 1</h2>
+  <h2>Project 3</h2>
   <p class="sub">Hier komt een korte beschrijving.</p>
-  <img src="assets/images/project1.png" alt="Project 1" style="border-radius:1rem;margin-bottom:1rem">
+  <img src="assets/images/project3.png" alt="Project 3" style="border-radius:1rem;margin-bottom:1rem">
   <article>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos voluptatum, corrupti reiciendis id deserunt laboriosam dolorem, explicabo nulla modi distinctio culpa inventore illo.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi minima repellendus, illum quos quisquam neque necessitatibus cum. Cumque, sit atque.</p>
   </article>
 </section>
 </div>
@@ -40,7 +40,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p class="small">Sybe Huybrechts</p>
+    <p class="small">&copy; 2025 Sybe Huybrechts</p>
   </div>
 </footer>
 
