--- a/project-5.html
+++ b/project-5.html
@@ -40,7 +40,7 @@
 
 <footer class="footer">
   <div class="container">
-    <p class="small">Sybe Huybrechts</p>
+    <p class="small">&copy; 2025 Sybe Huybrechts</p>
   </div>
 </footer>
 
