--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <main>
 <div class="container">
 
-<section class="hero">
+<section class="intro">
   <div>
     <h1>Hallo, ik ben Sybe — SNB student met een passie voor IT.</h1>
     <p class="lead">Ik werk graag gestructureerd en resultaatgericht. Op deze site vind je mijn projecten, ervaring en manieren om contact op te nemen.</p>
