--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 
 <section class="section">
   <h2>Portfolio</h2>
-  <p class="sub">Overzicht van 6 projecten.</p>
+  <p class="sub">Hier is een overzicht van mijn 6 projecten.</p>
 
   <div class="grid">
     <a class="card" href="webwiz.html">
